--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>User Admin</title>
     <link rel="stylesheet" href=
       "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
@@ -14,54 +15,56 @@
     <script src="user-admin.controller.client.js"></script>
   </head>
   <body>
-    <h1> User Admin</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Username</th>
-          <th>Password</th>
-          <th>First</th>
-          <th>Last</th>
-          <th>Role</th>
-          <th>DOB</th>
-          <th>&nbsp;</th>
-        </tr>
-      </thead>
-        <tr class="wbdv-form">
-          <td><input id="usernameFld" class="form-control"
-            placeholder="Username" /></td>
-          <td><input id="passwordFld" class="form-control"
-            placeholder="Password" /></td>
-          <td><input id="firstNameFld" class="form-control"
-            placeholder="First Name" /></td>
-          <td><input id="lastNameFld" class="form-control"
-            placeholder="Last Name" /></td>
-          <td><select id="roleFld" class="form-control">
-              <option value="FACULTY">Faculty</option>
-              <option value="STUDENT">Student</option>
-              <option value="ADMIN">Admin</option>
-          </select></td>
-          <td><span class="float-right" style="white-space: nowrap">
-              <i class="fa-2x fa fa-search wbdv-search"></i> <i
-              class="fa-2x fa fa-plus wbdv-create"></i> <i
-              class="fa-2x fa fa-check wbdv-update"></i>
-          </span></td>
-        </tr>
-      <tbody class="wbdv-tbody">
-         <tr class="wbdv-template wbdv-user wbdv-hidden">
-           <td class="wbdv-username">ehao</td>
-           <td>&nbsp;</td>
-           <td class="wbdv-first-name">Ernie</td>
-           <td class="wbdv-last-name">Hao</td>
-           <td class="wbdv-role">STUDENT</td>
-           <td class="wbdv-actions">
-             <span class="float-right">
-               <i id="wbdv-remove" class="fa-2x fa fa-times wbdv-remove"></i>
-               <i id="wbdv-edit" class="fa-2x fa fa-pencil wbdv-edit"></i>
-             </span>
-           </td>
-         </tr>
-      </tbody>
-    </table>
+    <div class="wbdv-app">
+      <h1> User Admin</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Username</th>
+            <th>Password</th>
+            <th>First</th>
+            <th>Last</th>
+            <th>Role</th>
+            <th>DOB</th>
+            <th>&nbsp;</th>
+          </tr>
+        </thead>
+          <tr class="wbdv-form">
+            <td><input id="usernameFld" class="form-control"
+              placeholder="Username" /></td>
+            <td><input id="passwordFld" class="form-control"
+              placeholder="Password" /></td>
+            <td><input id="firstNameFld" class="form-control"
+              placeholder="First Name" /></td>
+            <td><input id="lastNameFld" class="form-control"
+              placeholder="Last Name" /></td>
+            <td><select id="roleFld" class="form-control">
+                <option value="FACULTY">Faculty</option>
+                <option value="STUDENT">Student</option>
+                <option value="ADMIN">Admin</option>
+            </select></td>
+            <td><span class="float-right" style="white-space: nowrap">
+                <i class="fa-2x fa fa-search wbdv-search"></i> <i
+                class="fa-2x fa fa-plus wbdv-create"></i> <i
+                class="fa-2x fa fa-check wbdv-update"></i>
+            </span></td>
+          </tr>
+        <tbody class="wbdv-tbody">
+           <tr class="wbdv-template wbdv-user wbdv-hidden">
+             <td class="wbdv-username">ehao</td>
+             <td>&nbsp;</td>
+             <td class="wbdv-first-name">Ernie</td>
+             <td class="wbdv-last-name">Hao</td>
+             <td class="wbdv-role">STUDENT</td>
+             <td class="wbdv-actions">
+               <span class="float-right">
+                 <i id="wbdv-remove" class="fa-2x fa fa-times wbdv-remove"></i>
+                 <i id="wbdv-edit" class="fa-2x fa fa-pencil wbdv-edit"></i>
+               </span>
+             </td>
+           </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
