--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -44,9 +44,9 @@
                 <option value="ADMIN">Admin</option>
             </select></td>
             <td><span class="float-right" style="white-space: nowrap">
-                <i class="fa-2x fa fa-search wbdv-search"></i> <i
-                class="fa-2x fa fa-plus wbdv-create"></i> <i
-                class="fa-2x fa fa-check wbdv-update"></i>
+                <i class="fa-2x fa fa-search wbdv-search"></i>
+                <i id="wbdv-create" class="fa-2x fa fa-plus wbdv-create"></i>
+                <i class="fa-2x fa fa-check wbdv-update"></i>
             </span></td>
           </tr>
         <tbody class="wbdv-tbody">
@@ -66,5 +66,6 @@
         </tbody>
       </table>
     </div>
+    <script src="user-admin.controller.client.js"></script>
   </body>
 </html>
