--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -11,8 +11,7 @@
     <link href="user-admin.style.client.css" rel="stylesheet" />
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../services/user.service.client.js"></script>
-    <script src="user-admin.controller.client.js"></script>
+    <!-- <script src="../services/user.service.client.js"></script> -->
   </head>
   <body>
     <div class="wbdv-app">
@@ -38,16 +37,20 @@
               placeholder="First Name" /></td>
             <td><input id="lastNameFld" class="form-control"
               placeholder="Last Name" /></td>
-            <td><select id="roleFld" class="form-control">
+            <td>
+              <select id="roleFld" class="form-control">
                 <option value="FACULTY">Faculty</option>
                 <option value="STUDENT">Student</option>
                 <option value="ADMIN">Admin</option>
-            </select></td>
-            <td><span class="float-right" style="white-space: nowrap">
+              </select>
+            </td>
+            <td>
+              <span class="float-right" style="white-space: nowrap">
                 <i class="fa-2x fa fa-search wbdv-search"></i>
-                <i id="wbdv-create" class="fa-2x fa fa-plus wbdv-create"></i>
+                <i class="fa-2x fa fa-plus wbdv-create"></i>
                 <i class="fa-2x fa fa-check wbdv-update"></i>
-            </span></td>
+              </span>
+            </td>
           </tr>
         <tbody class="wbdv-tbody">
            <tr class="wbdv-template wbdv-user wbdv-hidden">
@@ -66,6 +69,7 @@
         </tbody>
       </table>
     </div>
-    <script src="user-admin.controller.client.js"></script>
+    <script type="text/javascript" src="user-admin.controller.client.js"></script>
+    <!-- <script> function createUser() {console.log("what is up");};</script> -->
   </body>
 </html>
