--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -12,11 +12,12 @@
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- <script src="../services/user.service.client.js"></script> -->
+    <script type="text/javascript" src="../../models/user.model.client.js"></script>
   </head>
   <body>
     <div class="wbdv-app">
       <h1> User Admin</h1>
-      <table>
+      <table class="table">
         <thead>
           <tr>
             <th>Username</th>
