Added more fields and styling fixes

--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -24,8 +24,10 @@
             <th>Password</th>
             <th>First</th>
             <th>Last</th>
-            <th>Role</th>
+            <th>E-mail</th>
+            <th>Phone</th>
             <th>DOB</th>
+            <th>Role</th>
             <th>&nbsp;</th>
           </tr>
         </thead>
@@ -38,6 +40,12 @@
               placeholder="First Name" /></td>
             <td><input id="lastNameFld" class="form-control"
               placeholder="Last Name" /></td>
+            <td><input id="emailFld" class="form-control"
+              placeholder="xxx@gmail.com" type="email"/></td>
+            <td><input id="phoneFld" class="form-control"
+              placeholder="617xxxxxx" type="tel"/></td>
+            <td><input id="dateOfBirthFld" class="form-control"
+              type="date"/></td>
             <td>
               <select id="roleFld" class="form-control">
                 <option value="FACULTY">Faculty</option>
@@ -56,9 +64,12 @@
         <tbody class="wbdv-tbody">
            <tr class="wbdv-template wbdv-user wbdv-hidden">
              <td class="wbdv-username">ehao</td>
-             <td>&nbsp;</td>
+             <td class="wbdv-password">****</td>
              <td class="wbdv-first-name">Ernie</td>
              <td class="wbdv-last-name">Hao</td>
+             <td class="wbdv-email">hao.e@husky.neu.edu</td>
+             <td class="wbdv-phone">6176517126</td>
+             <td class="wbdv-dob">09/22/1998</td>
              <td class="wbdv-role">STUDENT</td>
              <td class="wbdv-actions">
                <span class="float-right">
