Created Json object and fetch post for createUser

--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -48,6 +48,7 @@
               type="date"/></td>
             <td>
               <select id="roleFld" class="form-control">
+                <option value="" disabled selected>Select role</option>
                 <option value="FACULTY">Faculty</option>
                 <option value="STUDENT">Student</option>
                 <option value="ADMIN">Admin</option>
