--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -11,8 +11,6 @@
     <link href="user-admin.style.client.css" rel="stylesheet" />
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script src="../services/user.service.client.js"></script> -->
-    <script type="text/javascript" src="../../models/user.model.client.js"></script>
   </head>
   <body>
     <div class="wbdv-app">
@@ -82,7 +80,8 @@
         </tbody>
       </table>
     </div>
+        <script src="../../services/user.service.client.js"></script>
+    <!-- <script type="text/javascript" src="../../models/user.model.client.js"></script> -->
     <script type="text/javascript" src="user-admin.controller.client.js"></script>
-    <!-- <script> function createUser() {console.log("what is up");};</script> -->
   </body>
 </html>
