--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -72,8 +72,8 @@
              <td class="wbdv-role">STUDENT</td>
              <td class="wbdv-actions">
                <span class="float-right">
-                 <i id="wbdv-remove" class="fa-2x fa fa-times wbdv-remove"></i>
-                 <i id="wbdv-edit" class="fa-2x fa fa-pencil wbdv-edit"></i>
+                 <i class="fa-2x fa fa-times wbdv-remove"></i>
+                 <i class="fa-2x fa fa-pencil wbdv-edit"></i>
                </span>
              </td>
            </tr>
