Used User.js/hide create button when updating/eslint config

--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -80,8 +80,8 @@
         </tbody>
       </table>
     </div>
-        <script src="../../services/user.service.client.js"></script>
-    <!-- <script type="text/javascript" src="../../models/user.model.client.js"></script> -->
+    <script src="../../services/user.service.client.js"></script>
+    <script type="text/javascript" src="../../models/user.model.client.js"></script>
     <script type="text/javascript" src="user-admin.controller.client.js"></script>
   </body>
 </html>
