Added responsive styling/final proofread

--- a/src/main/webapp/jquery/login/login.style.client.css
+++ b/src/main/webapp/jquery/login/login.style.client.css
@@ -1,4 +1,7 @@
 .wbdv-body {
-  margin: 100px 0 0 300px;
-  width: 50%;
+  margin: 0 0 100px 0;
+  text-align: center;
+}
+.container {
+  text-align: left;
 }
