--- a/src/main/webapp/jquery/profile/profile.style.client.css
+++ b/src/main/webapp/jquery/profile/profile.style.client.css
@@ -1,13 +1,15 @@
-.container {
-  margin: 100px 0 0 400px;
+.container-fluid {
+  margin: 50px auto 120px auto;
   width: 50%;
+  text-align: center;
 }
-
 .buttons {
   margin: 50px 0 0 170px;
   width: 50%;
 }
-
-form {
-  width: 90%  ;
+label {
+  text-align: left;
+}
+h1 {
+  text-align: left;
 }
